# cellcoloc

./: .coverage  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  coverage.xml  junit.xml  pyproject.toml
.github/workflows/: cellcoloc_tests.yml
cell_coloc/: __init__.py  analysis.py  config.py  filtering.py  io.py  roi.py  runtime.py  schemas.py  segmentation.py  visualization.py
cellcoloc/: __init__.py  analysis.py  config.py  filtering.py  io.py  roi.py  runtime.py  schemas.py  segmentation.py  single_channel.py  visualization.py
cellcoloc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/source/: api.rst  changelog.md  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  overview.rst  usage.rst  usage_2d_dapi_stained_nuclei.rst  usage_2d_single_channel_dapi_nuclei.rst  usage_3d_microglia.rst  usage_example_datasets.rst  usage_results.rst  usage_three_channel_analysis.rst  usage_three_channel_zprojection.rst
example_data/: README.md
example_data/dapi_stained_nuclei_2D/: README.md
example_data/dapi_stained_nuclei_2D/results/: dapi_stained_nuclei_2D.ome_cell_colocalization.csv  dapi_stained_nuclei_2D.ome_cell_colocalization.xlsx
example_data/microglia_3D/: README.md
prototype/: annabell__czi.py
tests/: conftest.py  test_filtering.py  test_io_runtime_roi.py  test_segmentation_and_analysis.py  test_segmentation_cellpose_shims.py  test_single_channel.py  test_smoke.py  test_visualization.py
user_scripts/: annabell__czi_user_script.py  dapi_stained_nuclei_2D_single_channel_user_script.ipynb  dapi_stained_nuclei_2D_single_channel_user_script.py  dapi_stained_nuclei_2D_user_script.ipynb  dapi_stained_nuclei_2D_user_script.py  microglia_2D_user_script.py  microglia_3D_full_image_user_script.py  microglia_3D_three_channel_user_script.ipynb  microglia_3D_three_channel_user_script.py  microglia_3D_three_channel_zproject_user_script.ipynb  microglia_3D_three_channel_zproject_user_script.py  microglia_3D_user_script.ipynb  microglia_3D_user_script.py  nb_dapi_stained_nuclei_2D_single_channel_user_script.ipynb  nb_dapi_stained_nuclei_2D_user_script.ipynb  nb_microglia_3D_three_channel_user_script.ipynb  nb_microglia_3D_three_channel_zproject_user_script.ipynb  nb_microglia_3D_user_script.ipynb
