[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellcoloc"
version = "0.0.4"
description = "Interactive segmentation-based colocalization analysis for microscopy images"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Fabrizio Musacchio" },
]
keywords = [
  "microscopy",
  "bioimaging",
  "colocalization",
  "segmentation",
  "cellpose",
  "napari",
  "omio",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "cellpose",
  "omio-microscopy",
  "matplotlib",
  "pandas",
  "openpyxl",
  "scikit-image",
  "appdirs",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]
interactive = [
  "ipykernel",
]
cellpose3 = [
  "cellpose==3.1.1.2",
]

[project.urls]
Homepage = "https://github.com/FabrizioMusacchio/CellColoc"
Repository = "https://github.com/FabrizioMusacchio/CellColoc"
Issues = "https://github.com/FabrizioMusacchio/CellColoc/issues"
Changelog = "https://github.com/FabrizioMusacchio/CellColoc/blob/main/CHANGELOG.md"
Zenodo = "https://doi.org/10.5281/zenodo.20787509"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cellcoloc*"]

[tool.flit.sdist]
exclude = [
  "docs/source/_static",
  "user_scripts/figures",
]

[tool.pytest.ini_options]
addopts = "-ra -p no:napari -p no:napari-plugin-engine -p no:npe2"
testpaths = ["tests"]
filterwarnings = [
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.coverage.run]
branch = true
source = ["cellcoloc"]
relative_files = true

[tool.coverage.paths]
source = [
  "cellcoloc",
  "*/cellcoloc",
]
